--- a/Packages/Zephyr.DOTSAStar/Runtime/Zephyr.DOTSAStar.Runtime.asmdef
+++ b/Packages/Zephyr.DOTSAStar/Runtime/Zephyr.DOTSAStar.Runtime.asmdef
@@ -1,10 +1,11 @@
 {
-    "name": "Zephyr.DOTSAStar.Core",
+    "name": "Zephyr.DOTSAStar.Runtime",
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:2665a8d13d1b3f18800f46e256720795",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:d94b2daf4dcc4374c83b915e68dbc553"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
