--- a/Hybrid/Zephyr.DOTSAStar.Hybrid.asmdef
+++ b/Hybrid/Zephyr.DOTSAStar.Hybrid.asmdef
@@ -4,6 +4,7 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:8819f35a0fc84499b990e90a4ca1911f",
+        "GUID:7a450cf7ca9694b5a8bfa3fd83ec635a",
         "GUID:f721aee3372edbf44a04ef8238d64f21",
         "GUID:d94b2daf4dcc4374c83b915e68dbc553"
     ],
