--- a/Packages/Zephyr.DOTSAStar/package.json
+++ b/Packages/Zephyr.DOTSAStar/package.json
@@ -1,13 +1,12 @@
 {
   "name": "zephyr.dotsastar",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "displayName": "Zephyr DOTSAStar",
   "description": "An A* path finding library for DOTS",
   "unity": "2019.2",
   "dependencies": {
     "com.unity.entities": "0.1.1-preview",
-    "com.unity.burst": "1.1.2",
-    "zephyr.define": "https://github.com/zephyr1125/ZephyrDefine.git#upm"
+    "com.unity.burst": "1.1.2"
   },
   "author": {
     "name": "Zephyr Zhang",
